[gd_scene load_steps=6 format=3 uid="uid://da5bio18egfg6"]

[ext_resource type="Script" uid="uid://ccdothooc1grv" path="res://Scripts/Combat/StatusEffects/DamageDelayStatusEffect.gd" id="1_l1ftv"]
[ext_resource type="Script" uid="uid://c8sj8b1npavnd" path="res://Scripts/Combat/CombatEffects/DamageEffect.gd" id="2_r7ayv"]
[ext_resource type="Script" uid="uid://bgka26pbphks7" path="res://Scripts/StatSystem/Stat.gd" id="4_7qxum"]
[ext_resource type="Script" uid="uid://2vlwp08ancca" path="res://Scripts/StatSystem/Stats/GetActorStatScaler.gd" id="4_lblk8"]
[ext_resource type="Script" uid="uid://clr8tbibqclow" path="res://Scripts/StatSystem/Stats/StatScaler.gd" id="4_tg50c"]

[node name="DamageDelayStatusEffect" type="Node" node_paths=PackedStringArray("damage_effect", "stack_stat") groups=["damage_delay", "negative_status_effect"]]
script = ExtResource("1_l1ftv")
damage_effect = NodePath("DamageEffect")
duration = 5.0
stackable = true
stack_stat = NodePath("StackStat")
id = "damage_delay"

[node name="DamageEffect" type="Node" parent="." node_paths=PackedStringArray("damage_stat")]
script = ExtResource("2_r7ayv")
damage_stat = NodePath("Damage")
damage_type = 1

[node name="Damage" type="Node" parent="DamageEffect"]
script = ExtResource("4_7qxum")
stat_value = 50.0

[node name="StatScaler" type="Node" parent="DamageEffect/Damage" node_paths=PackedStringArray("stat", "scale_with_stat")]
script = ExtResource("4_tg50c")
stat = NodePath("..")
scale_with_stat = NodePath("../../../StackStat")
scale_ratio = 1.0

[node name="StackStat" type="Node" parent="."]
script = ExtResource("4_7qxum")
stat_value = 1.0

[node name="DuckStatScaler" type="Node" parent="StackStat" node_paths=PackedStringArray("stat")]
script = ExtResource("4_lblk8")
stat = NodePath("..")
scale_with_stat_id = "magic"
